--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
               <div class="panel-heading main-color-bg">
                 <h3 class="panel-title">Website Overview</h3>
               </div>
+            <div class="mapLegend" id="mapLegend"></div>
+            <div class="mapLegend" id="pyramidSvgCont">
+                <svg id="pyramidSvg"></svg>
+            </div>
               <!-- Map of Ireland in SVG -->
         <svg
         xmlns:dc="http://purl.org/dc/elements/1.1/"
@@ -514,6 +518,7 @@
 
     <!--  D3 link -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="js/pyramid.js"></script>
     <!-- Regular app.js file -->
     <script src="js/app.js"></script>
     <script src="js/d3Map.js"></script>
